Updated the links and templates
Udated the links to the templates and made some changes to the header
links. Added more comments for clarity.

--- a/style.css
+++ b/style.css
@@ -506,10 +506,17 @@ a:hover {
 	font-size: 20px;
 }
 
-
 #main
 {
 	padding-left: 180px;
 	width:100px;
 		
+}
+
+#feedbackBar
+{
+	background-color:#6CF;
+	text-align:center;
+	font-size:12px;
+	color:#FFF;	
 }
